Update login in Angular 14

--- a/deskover-dashboard-website/src/app/components/home/manage/categories/categories.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/categories/categories.component.html
@@ -47,7 +47,7 @@
               <th class="align-middle">Slug</th>
               <th class="align-middle">Mô tả</th>
               <th class="align-middle text-center">Ngày cập nhật</th>
-              <th class="align-middle text-end">Công cụ</th>
+              <th class="align-middle text-end"></th>
             </tr>
             </thead>
             <tbody *ngIf="categories?.length !== 0">
