--- a/deskover-dashboard-website/src/app/components/home/manage/promotions/promotions.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/promotions/promotions.component.html
@@ -49,7 +49,7 @@
               <th class="align-middle">Mức giảm giá</th>
               <th class="align-middle text-center">Thời gian bắt đầu</th>
               <th class="align-middle text-center">Thời gian kết thúc</th>
-              <th class="align-middle text-end">Công cụ</th>
+              <th class="align-middle text-end"></th>
             </tr>
             </thead>
             <tbody *ngIf="discounts?.length !== 0">
