--- a/deskover-dashboard-website/src/styles.scss
+++ b/deskover-dashboard-website/src/styles.scss
@@ -247,13 +247,13 @@ tr, td {
 }
 
 /* Modal & CKEditor */
-.modal-body, .ck.ck-editor__main>.ck-editor__editable {
-  overflow-x: hidden !important;
-}
-
 .modal-fullscreen {
   max-height: none;
 }
+
+//.modal-body, .ck.ck-editor__main>.ck-editor__editable {
+//  overflow-x: hidden !important;
+//}
 
 //.ck-rounded-corners .ck.ck-editor__editable:not(.ck-editor__nested-editable),
 //.ck.ck-editor__editable.ck-rounded-corners:not(.ck-editor__nested-editable) {
