Update order admin page

--- a/deskover-dashboard-website/src/app/components/home/manage/brands/brands.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/brands/brands.component.html
@@ -104,7 +104,7 @@
   <div class="modal-dialog modal-dialog-centered modal-md">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 id="brand-dialog-sizes" class="modal-title pull-left text-primary fw-bold">
+        <h4 id="brand-dialog-sizes" class="modal-title pull-left text-uppercase text-primary fw-bold">
           {{ isEdit ? 'Cập nhật' : 'Thêm' }} thương hiệu
         </h4>
         <button type="button" class="btn-close close pull-right"
