--- a/deskover-dashboard-website/src/app/components/home/manage/categories/subcategories/subcategories.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/categories/subcategories/subcategories.component.html
@@ -121,7 +121,7 @@
   <div class="modal-dialog modal-dialog-centered modal-md">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 id="subcategory-dialog-sizes" class="modal-title pull-left text-primary fw-bold">
+        <h4 id="subcategory-dialog-sizes" class="modal-title pull-left text-uppercase text-primary fw-bold">
           {{ isEdit ? 'Cập nhật' : 'Thêm' }} danh mục
         </h4>
         <button type="button" class="btn-close close pull-right"
