--- a/deskover-dashboard-website/src/app/components/home/manage/products/products.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/products/products.component.html
@@ -137,7 +137,7 @@
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 id="product-dialog-sizes" class="modal-title pull-left text-primary fw-bold">
+        <h4 id="product-dialog-sizes" class="modal-title pull-left text-uppercase text-primary fw-bold">
           {{ isEdit ? 'Cập nhật' : 'Thêm' }} sản phẩm
         </h4>
         <button type="button" class="btn-close close pull-right"
