--- a/deskover-dashboard-website/src/app/components/home/manage/promotions/promotions.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/promotions/promotions.component.html
@@ -119,7 +119,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h4 id="product-discount-dialog-sizes"
-            class="modal-title pull-left text-primary fw-bold text-uppercase d-flex align-items-center">
+            class="modal-title pull-left text-uppercase text-primary fw-bold text-uppercase d-flex align-items-center">
           {{discount.name}} <span class="badge bg-faded-danger text-danger ms-2">Giảm {{discount.percent}}%</span>
           <!--{{discount.name}} <span class="alert alert-danger p-1">{{discount.percent}}%</span>-->
         </h4>
@@ -227,7 +227,7 @@
   <div class="modal-dialog modal-dialog-centered modal-md">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 id="discount-dialog-sizes" class="modal-title pull-left text-primary fw-bold">
+        <h4 id="discount-dialog-sizes" class="modal-title pull-left text-uppercase text-primary fw-bold">
           {{ isEdit ? 'Cập nhật' : 'Thêm' }} khuyến mãi
         </h4>
         <button type="button" class="btn-close close pull-right"
