--- a/deskover-dashboard-website/src/styles.scss
+++ b/deskover-dashboard-website/src/styles.scss
@@ -1,3 +1,18 @@
+/* Scrollbar */
+::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(104, 105, 119, 0.4);
+  border-radius: 20px;
+}
+
 @import "variable";
 @import "bootstrap";
 
@@ -14,23 +29,6 @@
 
 @import "common";
 
-/* width */
-::-webkit-scrollbar {
-  height: 5px;
-  width: 5px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: rgba(104, 105, 119, 0.4);
-  border-radius: 20px;
-}
-
 body {
   width: 100vw;
   height: 100vh;
@@ -42,9 +40,6 @@ tr, td {
   white-space: nowrap;
 }
 
-.notiflix-confirm-buttons>a {
-  text-decoration: none;
-}
 .brand-link {
   text-align: center;
 }
@@ -254,13 +249,13 @@ tr, td {
 //.modal-body, .ck.ck-editor__main>.ck-editor__editable {
 //  overflow-x: hidden !important;
 //}
-
+//
 //.ck-rounded-corners .ck.ck-editor__editable:not(.ck-editor__nested-editable),
 //.ck.ck-editor__editable.ck-rounded-corners:not(.ck-editor__nested-editable) {
 //  border: 1px solid #ced4da;
 //  border-radius: 0.375rem;
 //}
-
+//
 //.ck-rounded-corners .ck.ck-balloon-panel, .ck.ck-balloon-panel.ck-rounded-corners {
 //  z-index: 10055 !important;
 //
@@ -268,3 +263,9 @@ tr, td {
 //    z-index: 10056 !important;
 //  }
 //}
+
+/* Notiflix */
+.notiflix-confirm-buttons>a {
+  text-decoration: none;
+}
+
