--- a/deskover-dashboard-website/src/app/components/home/manage/products/products.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/products/products.component.html
@@ -225,10 +225,10 @@
                 <label class="form-label" [for]="'video'">Youtube URL</label>
                 <input type="url" class="form-control mb-3" id="video" name="video" [(ngModel)]="product.video"
                        #video="ngModel" placeholder="https://youtu.be/fazEeJYHxTc" pattern="https://.*"/>
-                <div class="ratio ratio-16x9" *ngIf="product.video">
+                <!--<div class="ratio ratio-16x9" *ngIf="product.video">
                   <iframe [src]="getUrlYoutubeEmbed(product.video)"
                           title="YouTube video" allowfullscreen></iframe>
-                </div>
+                </div>-->
               </div>
             </div>
             <div class="col-12 col-lg-8">
